crates/analyzer/tests/snapshots/errors__init_duplicate_def.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `fn __init__()` is defined multiple times in `contract Foo`
   ┌─ compile_errors/init_duplicate_def.fe:2:5
   │    
 2 │         pub fn __init__() {}
   │         ^^^^^^^^^^^^^^^^^^^^ `__init__` first defined here
   ·    
 6 │ ╭       pub fn __init__() {
 7 │ │           1 + 2
 8 │ │       }
   │ ╰───────' `init` redefined here
 9 │     
10 │   ╭     pub fn __init__() {
11 │   │         3 + 4
12 │   │     }
   │   ╰─────' `__init__` redefined here


